# Bootstrap-sampling-distribution

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: main.yml
bootstrap_sampling_distribution/: __init__.py  errors.py  plotting.py  sampling.py  statistics.py
docs/source/: bootstrap_sampling_distribution.rst  conf.py  index.rst  modules.rst  sampdist.rst
sampdist/: __init__.py  errors.py  plotting.py  sampling.py  statistics.py
tests/: test_plotting.py  test_sampling.py  test_statistics.py
