[tool.poetry]
name = "Bootstrap-sampling-distribution"
version = "1.0.0"
description = "Use bootstrap resampling to estimate the sampling distribution of a statistic."
authors = ["Elmo Moilanen"]
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["statistics", "statistical-inference", "resampling", "sampling-distribution"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.23"
matplotlib = "^3.6"
scipy = "^1.9"

[tool.poetry.group.dev.dependencies]
black = "^22.8"
pytest = "^7.1"
flake8 = "^5.0"
pre-commit = "^2.20"
mypy = "^0.981"

[tool.poetry.group.docs.dependencies]
sphinx = "^5.0"
sphinx-rtd-theme = "1.0.0"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | docs
)/
'''

[tool.mypy]
strict = true
pretty = true
implicit_reexport = false
show_error_codes = true
disable_error_code = [
    "type-arg", # Missing type parameters for generic type "ndarray"
    "index", # Value of type "Union[float, ndarray]" is not indexable
    "union-attr", # Item "float" of "Union[float, ndarray]" has no attribute x
]
exclude = [
    "docs/",
    "tests/",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
