[tool.poetry]
name = "Bootstrap-sampling-distribution"
version = "1.0.0"
description = "Use bootstrap resampling to estimate the sampling distribution of a statistic."
authors = ["Elmo Moilanen"]
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["statistics", "statistical-inference", "resampling", "sampling-distribution"]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2"
matplotlib = "^3.9"
scipy = "^1.15"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^25.1"
pytest = "^8.3"
flake8 = "^7.0"
mypy = "^1.15"
coverage = "^7.6"

[tool.poetry.group.docs.dependencies]
sphinx = "^8.0"
sphinx-rtd-theme = "^3.0"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | docs
)/
'''

[tool.mypy]
strict = true
pretty = true
implicit_reexport = false
show_error_codes = true
disable_error_code = [
    "type-arg", # Missing type parameters for generic type "ndarray"
    "index", # Value of type "Union[float, ndarray]" is not indexable
    "union-attr", # Item "float" of "Union[float, ndarray]" has no attribute x
]
exclude = [
    "docs/",
    "tests/",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
